[package]
name = "meow"
version = "0.1.0"
authors = ["Marek Veselý <notmarek1337@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.4.7"
scraper = "0.12.0"
regex = "1"